--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "normalize.css": "^8.0.1"
+  }
 }
