--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.0.0",
+    "gulp-cli": "^2.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-html-minifier": "^0.1.8",
     "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.1",
-    "normalize.css": "8.0.1"
+    "normalize.css": "*"
   },
   "dependencies": {}
 }
